<resources>
    <string name="app_name">Tartibla!</string>
    <string name="steps">Qadamlar</string>
    <string name="_120">120</string>
    <string name="time">Vaqt</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="restart">restart</string>
    <string name="_4">4</string>
    <string name="_15">15</string>
    <string name="_14">14</string>
    <string name="_13">13</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_10">10</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="main_menu">main menu</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="puzzle_15">Tartibla!</string>
    <string name="to_win_this_game_you_have_to_collect_all_numbers_in_the_correct_order">Jumboqni yechish uchun raqamlarni</string>
    <string name="developer_akmal_mahmudov">Dasturchi: Akmal Mahmudov</string>
    <string name="todo">TODO</string>
    <string name="your_time">Vaqtingiz:</string>
    <string name="ytime">Vaqtingiz:</string>
    <string name="your_steps">Qadamlar:</string>
    <string name="congrats">Siz yutdingiz!</string>
    <string name="telegram_akmal_greatest">Telegram: @akmal_greatest</string>
    <string name="to_gri_tartibda_yig_ing">to`gri tartibda yig`ing</string>
    <string name="ushbu">Ushbu o`yinni GITA dasturvchilar akademiyasida dastlabki darslarda</string>
    <string name="ushbu2">olgan bilimlarim asosida yaratganman</string>
    <string name="tartibla">Tartibla!</string>
    <string name="jumboqni">Jumboqni yechish uchun raqamlarni to\'gri tartibda yig\'ing. Dasturchi: Akmal Mahmudov. Ushbu o\'yinni GITA dasturchilar akademiyasida dastlabki darslarda olgan bilimlarim asosida yaratganman</string>
    <string name="to_gri">to\'gri tartibda yig\'ing</string>
    <string name="dasturchi">Dasturchi: Akmal Mahmudov</string>
    <string name="usbu">Ushbu o\'yinni GITA dasturchilar</string>
    <string name="akademiyasida">akademiyasida dastlabki darslarda</string>
    <string name="darslarda">darslarda olgan bilimlarim asosida yaratganman</string>
</resources>