<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/w1"
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:contentDescription="@string/todo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/w2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteY="-20dp"
        app:srcCompat="@drawable/wood" />

    <ImageView
        android:id="@+id/w2"
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:contentDescription="@string/todo"
        app:layout_constraintLeft_toRightOf="@id/w1"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/wood"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/steps"
        android:textAlignment="center"
        android:textColor="#482903"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/w1"
        app:layout_constraintRight_toRightOf="@id/w1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/stepper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/_120"
        android:textAlignment="center"
        android:textColor="#482903"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="@id/w1"
        app:layout_constraintRight_toRightOf="@id/w1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/vaqt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/time"
        android:textAlignment="center"
        android:textColor="#482903"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/w2"
        app:layout_constraintRight_toRightOf="@id/w2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="30dp" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/carter_one"
        android:textAlignment="center"
        android:textColor="#482903"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/w2"
        app:layout_constraintRight_toRightOf="@id/w2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="30dp" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="24dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:onClick="clickHome"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/restart"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/restart"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:onClick="clickRestart"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toBottomOf="@id/home"
        app:layout_constraintLeft_toRightOf="@id/home"
        app:layout_constraintRight_toLeftOf="@id/musix"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/musix"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:onClick="clickMusic"
        android:src="@drawable/music"
        app:layout_constraintBottom_toBottomOf="@id/home"
        app:layout_constraintLeft_toRightOf="@id/restart"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <View
        android:id="@+id/top"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:background="#992B1802"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintLeft_toLeftOf="@id/layout"
        app:layout_constraintRight_toRightOf="@id/layout" />

    <View
        android:id="@+id/left"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:background="#992B1802"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        app:layout_constraintRight_toLeftOf="@id/layout"
        app:layout_constraintTop_toTopOf="@id/top" />

    <View
        android:id="@+id/right"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:background="#992B1802"
        app:layout_constraintBottom_toBottomOf="@id/bottom"
        app:layout_constraintLeft_toRightOf="@id/layout"
        app:layout_constraintTop_toTopOf="@id/top" />

    <View
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginBottom="69dp"
        android:background="#992B1802"
        app:layout_constraintLeft_toLeftOf="@id/layout"
        app:layout_constraintRight_toRightOf="@id/layout"
        app:layout_constraintTop_toBottomOf="@id/layout" />

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b1"
            style="@style/ButtonStyle"
            android:text="@string/_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b2"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/b1"
            android:text="@string/_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b3"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/b2"
            android:text="@string/_3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b4"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/b3"
            android:text="@string/_4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b5"
            style="@style/ButtonStyle"
            android:layout_below="@id/b1"
            android:text="@string/_5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b6"
            style="@style/ButtonStyle"
            android:layout_below="@id/b1"
            android:layout_toEndOf="@id/b5"
            android:text="@string/_6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b7"
            style="@style/ButtonStyle"
            android:layout_below="@id/b1"
            android:layout_toEndOf="@id/b6"
            android:text="@string/_7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b8"
            style="@style/ButtonStyle"
            android:layout_below="@id/b1"
            android:layout_toEndOf="@id/b7"
            android:text="@string/_8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b9"
            style="@style/ButtonStyle"
            android:layout_below="@id/b5"
            android:text="@string/_9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b10"
            style="@style/ButtonStyle"
            android:layout_below="@id/b5"
            android:layout_toEndOf="@id/b9"
            android:text="@string/_10" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b11"
            style="@style/ButtonStyle"
            android:layout_below="@id/b5"
            android:layout_toEndOf="@id/b10"
            android:text="@string/_11" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b12"
            style="@style/ButtonStyle"
            android:layout_below="@id/b5"
            android:layout_toEndOf="@id/b11"
            android:text="@string/_12" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b13"
            style="@style/ButtonStyle"
            android:layout_below="@id/b9"
            android:text="@string/_13" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b14"
            style="@style/ButtonStyle"
            android:layout_below="@id/b9"
            android:layout_toEndOf="@id/b9"
            android:text="@string/_14" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b15"
            style="@style/ButtonStyle"
            android:layout_below="@id/b10"
            android:layout_toEndOf="@id/b2"
            android:text="@string/_15" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b16"
            style="@style/ButtonStyle"
            android:layout_below="@id/b10"
            android:layout_toEndOf="@id/b11"
            android:background="#00FFFFFF" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>